fix whitespace under hero image

--- a/css/main.css
+++ b/css/main.css
@@ -53,12 +53,12 @@ h3 {
 
 .hero-image {
   text-align: center;
+  display: block;
 }
 
 .hero-image img {
   width: 99vw;
 }
-
 
 .paralax {
     background-attachment: fixed;
